# nonfrontier

./: .gitignore  BLOGPOST.md  README.md  main.py  pyproject.toml
day1-inference/src/: groq_gpt_oss.py
day2-lora/: LoRA_BLOGPOST.md  NEW_QUESTIONS.md  QUESTIONS.md  README.md  compare.py  generate_chunk.py  generate_data.py  main.py  pyproject.toml  serve.py  train.py
day2-lora/results/: v1.json  v2.json  v2_comparison.md  v2_serve_test.md  v3.json  v3_comparison.md
src/: groq.py  hf_transformers.py  modal_gpt_oss.py  modal_hf_baseline.py
