[project]
name = "nonfrontier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "groq>=1.1.0",
    "modal>=1.3.5",
    "openai>=2.26.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.2.3",
    "torch>=2.10.0",
    "transformers>=5.3.0",
]
